package com.zsx.design.pattern.factory.method;

public interface IFactory {
    IProduct produce();
}
