package com.zsx.design.pattern.factory.method;

public interface IProduct {
    String getProduct();
}
